# project-template

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.rst  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  SECURITY.rst  conftest.py  pyproject.toml
.agents/skills/update-documentation/: SKILL.md
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/{{ package_name }}/: __init__.py  py.typed
src/{{ package_name }}/cli/: __init__.py  _main.py
src/{{ package_name }}/tests/: __init__.py
